--- a/chiromancy.html
+++ b/chiromancy.html
@@ -160,7 +160,7 @@
 
         const combinedBase64 = canvas.toDataURL('image/jpeg').split(',')[1];
 
-        const webhookUrl = 'https://iamroslove.app.n8n.cloud/webhook/7c68014b-cdf2-47f1-b8cc-c98dbf828cba';
+        const webhookUrl = 'https://n8n.coolify.yenotdev.ru/webhook/7c68014b-cdf2-47f1-b8cc-c98dbf828cba';
 
         result.textContent = 'Отправка данных...';
 
