--- a/horoscope.html
+++ b/horoscope.html
@@ -145,7 +145,7 @@
       submitBtn.classList.add('opacity-50', 'cursor-not-allowed');
 
       try {
-        const webhookUrl = 'https://iamroslove.app.n8n.cloud/webhook/11347333-e2d3-4a54-8ab1-d712d4c37d34';
+        const webhookUrl = 'https://n8n.coolify.yenotdev.ru/webhook/11347333-e2d3-4a54-8ab1-d712d4c37d34';
 
         const response = await fetch(webhookUrl, {
           method: 'POST',
