--- a/sonnik.html
+++ b/sonnik.html
@@ -120,7 +120,7 @@
       submitBtn.classList.add('opacity-50', 'cursor-not-allowed');
 
       try {
-        const webhookUrl = 'https://iamroslove.app.n8n.cloud/webhook/dream-interpreter';
+        const webhookUrl = 'https://n8n.coolify.yenotdev.ru/webhook/dream-interpreter';
 
         const response = await fetch(webhookUrl, {
           method: 'POST',
