--- a/tarot.html
+++ b/tarot.html
@@ -165,7 +165,7 @@ function formatAnswer(text) {
 function sendToWebhook() {
   const questionInput = document.getElementById("questionInput");
   const question = questionInput.value.trim();
-  const webhookUrl = "https://iamroslove.app.n8n.cloud/webhook/1b49f56e-e5b1-46d3-b510-0dabf017c1ed";
+  const webhookUrl = "https://n8n.coolify.yenotdev.ru/webhook/1b49f56e-e5b1-46d3-b510-0dabf017c1ed";
 
   if (!question) {
     alert("Пожалуйста, введите вопрос.");
