Добавил фавикон для сайта

--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Пользовательское соглашение</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="/favicon_logo_only.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon_logo_only.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
