--- a/ads.html
+++ b/ads.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Реклама на сайте</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="/favicon_logo_only.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon_logo_only.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
