Отредактировал HTTP на HTTPS

--- a/tarot.html
+++ b/tarot.html
@@ -63,7 +63,7 @@
 
       <div class="mb-6 bg-white/60 border border-white/70 text-black rounded-xl p-4 shadow-inner backdrop-blur-sm transition-all duration-300" id="customToggle">
         <div class="font-bold text-black cursor-pointer select-none flex items-center text-lg" onclick="toggleInstructions()">
-          <svg class="w-4 h-4 mr-2" fill="none" id="toggleArrow" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <svg class="w-4 h-4 mr-2" fill="none" id="toggleArrow" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
             <path d="M9 5l7 7-7 7" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
           Как пользоваться Таро
