--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>О проекте1</title>
+  <title>О проекте</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="/favicon_logo_only.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/favicon_logo_only.ico" type="image/x-icon">
