--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   </nav>
 
   <div class="w-full max-w-3xl mx-auto bg-white/60 backdrop-blur-xl p-8 rounded-3xl shadow-lg border border-white/30 ring-1 ring-white/20 text-gray-900 mt-20">
-    <h1 class="text-4xl font-bold text-center mb-6">О проекте</h1>
+    <h1 class="text-4xl font-bold text-center mb-6">Салют, Ярослав!</h1>
     <p class="mb-4 text-lg">Наш сервис — это уникальное пространство для самопознания, интуитивной навигации и внутреннего роста. Мы собрали четыре мощных инструмента, которые помогают людям заглянуть вглубь себя, получить подсказки от Вселенной и просто провести время с интересом.</p>
 
     <h2 class="text-2xl font-semibold mt-6 mb-2">🌌 Сонник</h2>
