--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Главная — Толкование Снов</title>
+  <title>Главная — Толкование Снов!</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="/favicon_logo_only.ico" type="image/x-icon">
   <link rel="shortcut icon" href="/favicon_logo_only.ico" type="image/x-icon">
